fix: fix when opening an image in the modal, there’s a noticeable delay before the image loads, which causes a sudden change in the modal’s width and shifts the close button.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -138,12 +138,11 @@
   &-details-card {
     background-color: white;
     border-radius: 10px;
-    width: fit-content;
     height: 80vh;
     overflow: hidden;
     position: relative;
     margin: 0 5%;
-
+    aspect-ratio: var(--aspect-ratio);
     @media (min-width: $breakpoint-mobile) {
       height: 90vh;
     }
@@ -184,10 +183,11 @@
     z-index: 2;
     pointer-events: none;
     object-fit: cover;
-    min-height: 65vh;
+    height: 65vh;
     width: 100%;
+
     @media (min-width: $breakpoint-mobile) {
-      min-height: 75vh;
+      height: 75vh;
     }
   }
   button {
